--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>WebBlog</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="Style.css">
   <link rel="icon" href="favicon.ico">
 </head>
 
